# drone

./: README.md  TECHNICAL_DESIGN.md  pyproject.toml  requirements.txt
scripts/: obstaclecourse.py
scripts/examples/: flip_demo.py  sanity_test.py  takeoff_land.py
scripts/tutorial/: 00_hello_world.py  02_variables.py  03_conditionals.py  04_loops.py  05_imports_and_sleep.py  06_functions.py  07_lists.py  08_mini_mission.py  README.md
src/tello_demo/: __init__.py  __main__.py  clock.py  runner.py
src/tello_demo/sim/: __init__.py  commands.py  runtime.py  state.py  tello.py
src/tello_demo/sim/motion/: __init__.py  base.py  rails.py
src/tello_demo/sim/render/: __init__.py  geometry.py  matplotlib3d.py
src/tello_demo/studio/: __init__.py  __main__.py  app.py  classifier.py  models.py  process_runner.py  real_mode_gate.py  runtime_env.py  workspace.py
tests/: test_motion_model.py  test_runner.py  test_sim_tello.py  test_studio_classifier.py  test_studio_gate.py  test_studio_process_runner.py  test_studio_runtime_env.py  test_studio_workspace.py
